--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,17 @@ Licenc: GNU GPL
         </table>
     </div>
 
+    <div class="citatum">
+        Az ember lényege sokszor nem látszik, 
+        megbújik a felszín alatt, és talán 
+        sohasem kerül napvilágra.
+    </div>
+
     <div id="about">
         Nagy János, 2023-05-11,Szoft I-2 N
     </div>
+
+
 
     <script src="bootstrap.js"></script>
     <script src="app.js"></script>
